Done filters and sort on novel. Added some more route.
